# tdb-rs

./: .gitignore  Cargo.toml  README.md  build.rs  disperse.conf  disperse.toml
.github/workflows/: publish.yml  rust.yml
benches/: benchmarks.rs
examples/: iteration.rs  memory.rs  simple.rs
src/: lib.rs
