[package]
name = "tdb-rs"
version = "0.1.0"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@samba.org>"]
repository = "https://github.com/jelmer/tdb-rs.git"
homepage = "https://github.com/jelmer/tdb-rs"
license = "LGPL-3.0-or-later"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.65"

[dev-dependencies]
tempfile = "3"
