[package]
name = "trivialdb"
version = "0.1.5"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@samba.org>"]
repository = "https://github.com/jelmer/tdb-rs.git"
homepage = "https://github.com/jelmer/tdb-rs"
license = "LGPL-3.0-or-later"
description = "Rust bindings for the TDB database library"

[dependencies]
libc = "0.2"
bitflags = "1.2"

[build-dependencies]
pkg-config = "0.3"
bindgen = ">=0.65"
system-deps = "7.0.1"

[dev-dependencies]
tempfile = "3"

[package.metadata.system-deps]
tdb = "1.0"
